update str_replace with preg_replace

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
     "autoload": {
         "psr-4": {
             "Ekram\\SchemaForge\\": "src/"
-        }
+        },
+        "files": [
+            "src/Helpers/functions.php"
+        ]
     },
     "authors": [
         {
